--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,7 @@ Thumbs.db
 # Project specific
 .env
 config/config.json
-config/settings.json
+config/student_data2.csv
 *.log
 main_v1.py
 scripts/bulk_processor_old.py
@@ -49,3 +49,5 @@ scripts/master_project_old.py
 scripts/repo_manager_old.py
 scripts/utils_old.py
 scripts/worker_old.py
+
+data/
